# ContainerComposer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
container-compose-cli/: Cargo.toml  README.md
container-compose-cli/src/: cli.rs  config.rs  container.rs  main.rs  ui.rs
test-files/: README.md  basic.yml  container-compose.yml  dependencies.yml  simple-todo.yml  volumes.yml
test-files/api/: package.json  server.js
test-files/db/: init.sql
test-files/examples/simple-test/: container-compose.yml
test-files/examples/simple-web-app/: README.md  container-compose.yml
test-files/examples/simple-web-app/app/: package.json  server.js
test-files/examples/simple-web-app/html/: index.html
