[package]
name = "container-compose"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive"] }

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Process management
sysinfo = "0.32"

# HTTP client for container registries
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Terminal UI and progress bars
indicatif = "0.17"
console = "0.15"
colored = "2.0"
